# Warble

./: .env.example  .gitignore  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/helpers/: ax_paste  paste_helper
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  clipboard_paste.rs  commands.rs  config.rs  dataset.rs  hotkey.rs  lib.rs  main.rs  postprocess.rs  providers.rs  sound.rs  state.rs  transcription.rs  tray.rs
src/components/MainWindow/: MainWindow.tsx
src/components/StatusBar/: RecordingIndicator.tsx  StatusBar.tsx  WaveformBars.tsx
src/components/history/: HistoryWindow.tsx
src/components/settings/: SettingsWindow.tsx
src/components/shared/: GlassPanel.tsx  ThemePicker.tsx  Toggle.tsx
src/components/tabs/: HistoryTab.tsx  SettingsTab.tsx  StatusTab.tsx
src/hooks/: useAppConfig.ts  useRecordingState.ts  useTheme.ts
src/lib/: languages.ts  tauri-commands.ts
src/styles/: globals.css
src/styles/themes/: components.css  dawn.css  glass.css  nebula.css  ocean.css  tokens.css
