[package]
name = "warble"
version = "0.1.0"
edition = "2021"
description = "Voice-to-text desktop app powered by Whisper"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["multipart", "json"] }
libc = "0.2"
rodio = "0.20"
cpal = "0.15"
hound = "3.5"
chrono = "0.4"
dirs = "6"
tokio = { version = "1", features = ["full"] }
enigo = "0.3"
arboard = "3.6.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
dispatch = "0.2"
objc = "0.2"
block = "0.1"
core-graphics = "0.25"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
